[package]
name = "chart_view_rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.1"
csv="*"
chart={path="../../chart"}
data_struct={path="../../data_struct"}
read_file_into_data={path="../../file_io/read_file_into_data"}

