[package]
name = "significance_testing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
combination = "0.1.5"
data_struct={path="../../data_struct"}
array_tools={path="../../array_tools"}
math_array_tools={path="../../math_array_tools"}
